--- a/patchbay/api_workshop.html
+++ b/patchbay/api_workshop.html
@@ -331,7 +331,7 @@ a:hover { text-decoration:underline; }
         <!-- server box -->
         <rect x="564" y="24" width="200" height="264" rx="10" fill="#1a1a18" stroke="#333330" stroke-width="1.5"/>
         <text x="664" y="52" text-anchor="middle" font-family="Fraunces,serif" font-weight="700" font-size="14" fill="#e8e4d9">Server</text>
-        <text x="664" y="70" text-anchor="middle" font-family="IBM Plex Mono,monospace" font-size="9" fill="#666460">(dog.ceo, OpenRouter, Ollama, etc.)</text>
+        <text x="664" y="70" text-anchor="middle" font-family="IBM Plex Mono,monospace" font-size="9" fill="#666460">(dog.ceo, Groq, Ollama, etc.)</text>
 
         <rect x="580" y="86" width="168" height="80" rx="5" fill="#111110" stroke="#333330"/>
         <text x="590" y="102" font-family="IBM Plex Mono,monospace" font-size="9" fill="#666460">Received request.</text>
@@ -396,10 +396,10 @@ a:hover { text-decoration:underline; }
     <div class="panel-body">
       <div class="ctrl-group">
         <div class="ctrl-label">LLM Provider</div>
-        <div class="ctrl-hint">Both use the same request format. OpenRouter has free models — no credit card needed.</div>
+        <div class="ctrl-hint">All use the same request format. Groq has a free tier — no credit card needed.</div>
         <select id="llmProvider" onchange="onProviderChange()">
           <option value="nanogpt">NanoGPT (pay-per-prompt)</option>
-          <option value="openrouter">OpenRouter (free models available)</option>
+          <option value="groq">Groq (free tier available)</option>
           <option value="local">Local / Ollama (no key needed)</option>
         </select>
       </div>
@@ -1088,11 +1088,11 @@ const LLM_PROVIDERS = {
     hint: 'Get one at <a href="https://nano-gpt.com/api" target="_blank">nano-gpt.com/api</a> — pay-per-prompt, no subscription needed.',
     needsKey: true,
   },
-  openrouter: {
-    name: 'OpenRouter',
-    baseUrl: 'https://openrouter.ai/api/v1',
-    keyUrl: 'https://openrouter.ai/keys',
-    hint: 'Get one at <a href="https://openrouter.ai/keys" target="_blank">openrouter.ai/keys</a> — free models available, no credit card required.',
+  groq: {
+    name: 'Groq',
+    baseUrl: 'https://api.groq.com/openai/v1',
+    keyUrl: 'https://console.groq.com/keys',
+    hint: 'Get one at <a href="https://console.groq.com/keys" target="_blank">console.groq.com/keys</a> — free tier, no credit card required.',
     needsKey: true,
   },
   local: {
@@ -1123,13 +1123,15 @@ async function loadModels() {
       const resp = await fetch('https://nano-gpt.com/api/v1/models?detailed=true');
       const data = await resp.json();
       allModels = data.data.filter(m => m.subscription?.included);
-    } else if (provider === 'openrouter') {
-      const resp = await fetch('https://openrouter.ai/api/v1/models');
+    } else if (provider === 'groq') {
+      const key = document.getElementById('apiKey')?.value;
+      const headers = key ? { 'Authorization': `Bearer ${key}` } : {};
+      const resp = await fetch('https://api.groq.com/openai/v1/models', { headers });
       const data = await resp.json();
-      allModels = data.data.map(m => ({
-        ...m, name: m.name || m.id,
-        _free: m.id.includes(':free') || (m.pricing?.prompt === '0' && m.pricing?.completion === '0'),
-      }));
+      const skip = ['whisper', 'guard', 'safeguard', 'orpheus'];
+      allModels = (data.data || [])
+        .filter(m => !skip.some(s => m.id.includes(s)))
+        .map(m => ({ ...m, name: m.name || m.id, owned_by: m.owned_by || 'groq' }));
     } else {
       // Local / Ollama
       try {
@@ -1151,14 +1153,8 @@ async function loadModels() {
     }
     for (const p of Object.keys(groups)) {
       groups[p].sort((a,b) => {
-        if (provider === 'openrouter') {
-          // Free models first
-          const af = a._free?0:1, bf = b._free?0:1;
-          if (af !== bf) return af - bf;
-        } else {
-          const af = FEATURED.has(a.id)?0:1, bf = FEATURED.has(b.id)?0:1;
-          if (af !== bf) return af - bf;
-        }
+        const af = FEATURED.has(a.id)?0:1, bf = FEATURED.has(b.id)?0:1;
+        if (af !== bf) return af - bf;
         return a.name.localeCompare(b.name);
       });
     }
@@ -1179,25 +1175,8 @@ async function loadModels() {
       return;
     }
 
-    if (provider === 'openrouter') {
-      // Free models group first
-      const freeModels = allModels.filter(m => m._free);
-      if (freeModels.length) {
-        const og = document.createElement('optgroup');
-        og.label = `★ Free Models (${freeModels.length})`;
-        for (const m of freeModels.sort((a,b) => a.name.localeCompare(b.name))) {
-          const opt = document.createElement('option');
-          opt.value = m.id;
-          opt.textContent = '★ ' + m.name;
-          if (m.id.includes('gemma-3-27b') || m.id.includes('llama-3.3-70b')) opt.selected = true;
-          og.appendChild(opt);
-        }
-        sel.appendChild(og);
-      }
-    }
-
     for (const p of PROVIDER_ORDER) {
-      const list = (groups[p] || []).filter(m => provider !== 'openrouter' || !m._free);
+      const list = groups[p] || [];
       if (!list.length) continue;
       const og = document.createElement('optgroup');
       og.label = `${p} (${list.length})`;
@@ -1206,6 +1185,7 @@ async function loadModels() {
         opt.value = m.id;
         opt.textContent = (FEATURED.has(m.id)?'\u2605 ':'') + m.name;
         if (provider === 'nanogpt' && m.id === 'deepseek-chat') opt.selected = true;
+        if (provider === 'groq' && m.id === 'llama-3.3-70b-versatile') opt.selected = true;
         og.appendChild(opt);
       }
       sel.appendChild(og);
